<resources>
    <string name="app_name">Chop Shop 166</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_qr_ismentor">Is Mentor?</string>
    <string name="enter_name_text">Enter Name</string>
    <string name="ok_text">OK</string>

    <string name="qr_text">Sign in QR code</string>
    <string name="title_activity_help">About This App</string>
    <string name="action_name_settings">Settings</string>
    <string name="action_name_website">Website</string>
    <string name="action_name_calendar">Calendar</string>
    <string name="action_name_github">Github</string>
    <string name="action_name_help">Help</string>
    <string name="logo_text">Chop Shop 166 logo</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="help_text">
        "This app is designed to create a QR code for signing in to the Chop Shop Sign-In.\n\n"

        "Changes take effect as soon as you edit a setting.\n\n"

        "This app is powered by ZXing, which is released under the Apache License:\n\n"

        "Copyright 2018 ZXing

   Licensed under the Apache License, Version 2.0 (the \"License\");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an \"AS IS\" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License."
    </string>
</resources>
