<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_name_settings"/>

    <item
        android:id="@+id/action_web"
        android:icon="@drawable/ic_web_black_24dp"
        android:title="@string/action_name_website"/>

    <item
        android:id="@+id/action_calendar"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/action_name_calendar"/>

    <item
        android:id="@+id/action_github"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/action_name_github"/>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/action_name_help"/>

</menu>